--- a/formPage.html
+++ b/formPage.html
@@ -22,7 +22,7 @@
 	<div class="bg-image">	
 </div>
 
-<form action="">
+<form id="chuliki" method="dialog">
   <div class="title">
     <h2>leave your mark</h2>
   </div>
